# quic_chat_pysimplegui

./: README.md  pyproject.toml
src/client/: client.py
src/client/lib/: client_lib_chattingprotocol.py
src/server/: server.py
src/server/lib/: server_lib_chattingprotocol.py
