[tool.poetry]
name = "quic-chat-pysimplegui"
version = "0.1.0"
description = ""
authors = ["Sungwon Lee <drsungwon@khu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aioquic = "^1.2.0"
pysimplegui = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
